# zero_kernel

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  conanfile.py  gitmodules.json  pyproject.toml  requirement-uv.txt  requirements.txt  sast.py  uv-version.txt
.cursor/rules/: engineer.mdc
.github/workflows/: cd.yml  generic-slim.yml  github-ci.yml  light-manual.yml  light.yml  main.yml  slim.yml
builder/: __main__.py
builder/clients/: __init__.py  github.py  los.py  pa.py  rom_api.py
builder/commands/: __init__.py  assets.py  bundle.py  kernel.py
builder/configs/: argument.py  arguments.py  directory.py
builder/core/: __init__.py  assets_collector.py  kernel_builder.py
builder/engines/: __init__.py  container.py  container_engine.py  docker.py  docker_engine.py  generic_container.py  podman.py  podman_engine.py
builder/interfaces/: __init__.py  clients.py  commands.py  engines.py  managers.py  modules.py
builder/managers/: __init__.py  resource.py
builder/manifests/: devices.json  tools.json
builder/modifications/dumplinger/4.14/: kernelsu-compat.patch
builder/modifications/dumplinger/4.4/: fix-hci-uart.patch  fix-rt2800-injection-4.04.patch
builder/modifications/dumplinger/anykernel3/: anykernel.sh
builder/tools/: banner.py  cleaning.py  commands.py  fileoperations.py  logger.py  messages.py
builder/utils/: bridge.py  resource_manager.py
ci/: github.yml  gitlab.yml  sast.py
conan/: conanfile.py
docker/: .dockerignore  Dockerfile  Dockerfile.dockerignore
docs/: FAQ.md  FLASHING.md  TODO.md
docs/architecture/clients/: classes.puml  packages.puml
docs/architecture/commands/: classes.puml  packages.puml
docs/architecture/configs/: classes.puml  packages.puml
docs/architecture/core/: classes.puml  packages.puml
docs/architecture/engines/: classes.puml  packages.puml
docs/architecture/interfaces/: classes.puml  packages.puml
docs/architecture/managers/: classes.puml  packages.puml
docs/architecture/tools/: classes.puml  packages.puml
docs/architecture/utils/: classes.puml  packages.puml
documentation/: FLASHING.md  TODO.md
manifests/: devices.json  info.json  tools.json
modifications/: nhpatch.sh
modifications/dumplinger/anykernel3/: anykernel.sh
modifications/dumplinger/anykernel3/ramdisk/: init.nethunter.rc
modifications/dumplinger/kernel/: v2-2-6-mac80211-refactor-monitor-representation-in-sdata.patch
modifications/dumplinger/kernel/ath9k/: htc_drv_txrx.c.txt  htc_hst.c
modifications/dumplinger/kernel/mac80211/: cfg.c.txt  tx.c.txt
scripts/: generate_docs.py  get_version.py  get_version.sh  install_hooks.py  install_rtw_drivers.sh  multi_build.py  run_tests.py  sast.py
tests/unit/builder/core/: test_kernel_builder.py
tests/unit/builder/tools/: test_messages.py
tests/unit/wrapper/commands/: test_kernel_builder.py
tests/unit/wrapper/core/: test_kernel_builder.py
tests/unit/wrapper/modules/: test_kernel_builder.py
tests/unit/wrapper/tools/: test_commands.py  test_messages.py
tests/unit/wrapper/utils/: test_messages.py
tests/unit/zkb/tools/: test_commands.py  test_messages.py
wrapper/: __main__.py  bridge.py
wrapper/clients/: __init__.py  aospa.py  github.py  lineage.py  los.py  pa.py  rom_api.py  template_rom_api.py
wrapper/commands/: __init__.py  assets.py  bundle.py  interfaces.py  kernel.py
wrapper/configs/: __init__.py  argument_config.py  config.py  directory_config.py
wrapper/core/: assets_collector.py  kernel_builder.py
wrapper/engines/: __init__.py  bridge.py  container.py  container_engine.py  docker_engine.py  interfaces.py  podman_engine.py  template_container_engine.py
wrapper/interfaces/: __init__.py  clients.py  commands.py  modules.py
wrapper/manifests/: devices.json  tools.json
wrapper/models/: __init__.py  assets.py  assets_collector.py  bundle.py  bundle_creator.py  kernel.py  kernel_builder.py
wrapper/modifications/dumplinger/4.14/: kernelsu-compat.patch
wrapper/modifications/dumplinger/anykernel3/: anykernel.sh
wrapper/modifications/dumplinger/kernel/: add-wifi-injection-4.4.patch  kernelsu-compat.patch
wrapper/modules/: assets.py  assets_collector.py  bundle.py  bundle_creator.py  interfaces.py  kernel.py  kernel_builder.py
wrapper/modules/tools/: customcmd.py  fileoperations.py  messagedecorator.py
wrapper/tools/: __init__.py  cleaning.py  cleanmaster.py  commands.py  customcmd.py  fileoperations.py  messagedecorator.py  messages.py
wrapper/utils/: __init__.py  bridge.py  resource_manager.py  resources.py
zkb/: __main__.py
zkb/clients/: github.py  los.py  pa.py  rom_api.py
zkb/commands/: assets.py  bundle.py  kernel.py
zkb/configs/: __init__.py  argument.py
zkb/core/: assets_collector.py  kernel_builder.py
zkb/engines/: generic_container.py
zkb/interfaces/: __init__.py  clients.py  modules.py
zkb/managers/: resource.py
zkb/manifests/: tools.json
zkb/modifications/: nhpatch.sh
zkb/modifications/dumplinger/4.4/: add-wifi-injection-4.4.patch  fix-ath9k-freq2fbin.patch  fix-conflicts-with-rndis-configs.patch  fix-mac80211-compilation-error.patch
zkb/modifications/dumplinger/anykernel3/: anykernel.sh
zkb/modifications/dumplinger/anykernel3/ramdisk/: init.nethunter.rc
zkb/tools/: cleaning.py  commands.py  fileoperations.py
zkb/utils/: bridge.py
(+1 files in other folders)
