[project]
name = "zero-kernel"
version = "0.5.1"
description = "Advanced Android kernel builder with Kali NetHunter support."
authors = [{name = "seppzer0"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse",
    "conan ~=1.6",
    "requests ~=2.31",
    "pathlib ~=1.0",
    "typing ~=3.7",
    "pydantic ~=2.6"
]

[project.urls]
Repository = "https://github.com/astral-sh/uv"
Documentation = "https://github.com/astral-sh/uv"

[tool.uv]
dev-dependencies = [
    "bandit ~=1.7",
    "pytest ~=8.0",
    "pytest-cov ~=4.1",
    "pyright ~=1.1",
    "pylint ~=3.1",
    "ruff ~=0.7"
]


[tool.coverage.run]
source = [
    "builder/clients",
    "builder/commands",
    "builder/configs",
    "builder/engines",
    "builder/managers"
]

[tool.coverage.report]
show_missing = true

[tool.pyright]
include = ["builder"]
pythonVersion = "3.12"

[tool.ruff]
include = ["builder/*.py", "scripts/**/*.py"]
indent-width = 4
line-length = 120
exclude = [
    ".git",
    ".pytest_cache",
    ".venv"
]
output-format = "full"

[tool.ruff.lint]
select = ["E", "Q", "D", "E501"]
ignore = ["D1", "D200", "D212"]
task-tags = ["TODO", "NOTE"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
