[project]
name = "zero-kernel-builder"
version = "0.6.3"
description = "Advanced Android kernel builder with Kali NetHunter support."
authors = [{name = "seppzer0"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse",
    "conan ~=1.6",
    "requests ~=2.31",
    "pathlib ~=1.0",
    "typing ~=3.7",
    "pydantic ~=2.6",
]

[project.urls]
Repository = "https://github.com/seppzer0/zero_kernel"
Documentation = "https://github.com/seppzer0/zero_kernel/blob/main/README.md"

[project.scripts]
zkb = "zkb.__main__:main"

[dependency-groups]
main = [
    "conan ~=1.6",
    "requests ~=2.31",
    "pathlib ~=1.0",
    "pydantic ~=2.12",
]
dev = [
    {include-group = "main"},
    "bandit ~=1.7",
    "pytest ~=8.4",
    "pytest-cov ~=7.0",
    "pyright ~=1.1",
    "ruff ~=0.14",
    "pre-commit ~=4.3",
    "pip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zkb"]

[tool.uv]
default-groups = ["dev"]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
    #"implementation_name == 'cpython'",
]

[[tool.uv.index]]
name = "pypi"
default = true
url = "https://pypi.org/simple"

[tool.coverage.run]
source = [
    "zkb/clients",
    "zkb/commands",
    "zkb/configs",
    "zkb/engines",
    "zkb/managers"
]

[tool.coverage.report]
show_missing = true

[tool.pyright]
include = ["zkb"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.ruff]
include = ["zkb/**/*.py"]
indent-width = 4
line-length = 125
exclude = [
    ".git",
    ".pytest_cache",
    ".venv"
]
output-format = "full"

[tool.ruff.lint]
select = ["E", "Q", "D", "E501"]
ignore = ["D1", "D200", "D212"]
task-tags = ["TODO", "NOTE"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -vv"
testpaths = ["tests"]
